# virt-graph

./: .gitignore  CHANGELOG.md  CLAUDE.md  GEMINI.md  Makefile  README.md  SPEC.md  TODO.md  adaptive-singing-river.md  benchmark_comparison.md  benchmark_guide.md  doc_overhaul_plan.md  docker-compose.yml  experiment_notebook_1.md  fix_docs.md  fix_plan.md  fixes.md  fixplan.md  fixplan2.md  flickering-napping-summit.md  handler_pattern_cheat_sheet.md  implementation_plan3.md  jolly-sauteeing-fern.md  linkml-migration.md  magical-launching-forest.md  mkdocs.yml  neo4j_queries.md  operation-types-refactor.md  polished-shimmying-dongarra.md  pyproject.toml  queries.md  question_inventory.md  questions.md  sql_pattern_cheat_sheet.md  temporal-enchanting-haven.md  the_plan.md  todo.txt  typed-waddling-coral.md  validation_report.md  virt_graph.yaml  (+1 more)
ARCHIVE/: supply_chain.yaml
BENCHMARK_STUDY/: question_inventory.md  questions.md
ONTOLOGY_GENERATION_COMP/: Ontology_Generation_Comparison.md
Ontology_Generation_Comparison/: supply_chain.yaml  supply_chain_HEADLESS_TEST.yaml
RUN_1/: REPORT.md  WHAT_WE_DID.md  queries.md
archive/: SPEC.md  deep_review_summary.md  supply_chain_tbox_rbox.yaml
benchmark/: generate_ground_truth.py  queries.yaml  run.py
data/: schema.sql
docs/: architecture.md  benchmark-report.md  benchmark_results.md  getting-started.md  index.md  ontology-guide.md  ontology_discovery_session.md  tco_analysis.md
fmcg_example/: FMCG_README.md
neo4j/: docker-compose.yml  migrate.py  migration_metrics.json
ontology/: TEMPLATE.yaml  supply_chain.yaml  (+2 more)
(+271 files in other folders)
